plugins {
    id 'eclipse'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'maven-publish'
}

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

sourceSets {
    main {
        resources {
            srcDirs = [
                    "$rootDir/src/main/resources",
                    "$rootDir/src/generated/resources"
            ]
        }
    }
    datagen {
        compileClasspath += main.compileClasspath
        runtimeClasspath += main.runtimeClasspath
        compileClasspath += main.output
        runtimeClasspath += main.output
    }
}

neoForge {
    version = project.neoforge_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }
}

repositories {
    mavenLocal()
    maven {
        name = "BlameJared"
        url 'https://maven.blamejared.com/'
    }
    maven {
        name = "CurseMaven"
        url = 'https://www.cursemaven.com'
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }
    maven {
        name = "Greenhouse Maven"
        url = "https://maven.greenhouse.lgbt/releases/"
    }
}

dependencies {
    // JEI/EMI
    runtimeOnly("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
    compileOnly("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
    compileOnly("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    //runtimeOnly("dev.emi:emi-forge:${emi_version}")
    // for multiblock definition check
    runtimeOnly("curse.maven:just-enough-immersive-multiblocks-634571:7131221")

    // jade
    implementation("curse.maven:jade-324717:6855440")

    // IE (IP compat for planned)
    implementation("blusunrize.immersiveengineering:ImmersiveEngineering:${ie_version}")
    implementation("blusunrize.immersiveengineering:ImmersiveEngineering:${ie_version}:datagen")
    implementation("curse.maven:immersive-petroleum-268250:7512547")

    // Farmersdelight
    implementation("curse.maven:farmers-delight-398521:7596353")

    // Let's Do
    implementation("curse.maven:architectury-api-419699:5137938")
    implementation("curse.maven:lets-do-vinery-704465:6854288")
    implementation("curse.maven:lets-do-farm-charm-1038103:7088013")

    // Brewin' And Chewin'
    implementation("curse.maven:brewin-and-chewin-637808:6237884")
}


publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            groupId = mod_group_id
            artifactId = mod_id
            version = mod_version
        }
    }
    repositories {
        maven {
            url = "https://maven.akkiserver.uk/repository/maven-snapshots/"
            allowInsecureProtocol = false
            credentials {
                username = System.getenv("USER")
                password = System.getenv("PASS")
            }
        }
    }
}

tasks.register('updateBuildNumber') {
    mustRunAfter 'clean'
    doLast {
        def buildFile = file('build.txt')
        if (!buildFile.exists()) buildFile.text = '0'
        def nextNum = buildFile.text.trim().toInteger() + 1
        buildFile.text = nextNum.toString()
    }
}

tasks.named('build') {
    dependsOn updateBuildNumber
}

tasks.named('publish') {
    dependsOn build
}

gradle.taskGraph.whenReady { taskGraph ->
    def buildFile = file('build.txt')
    def buildNum = buildFile.exists() ? buildFile.text.trim() : "0"

    if (taskGraph.hasTask(':updateBuildNumber')) {
        project.version = "${mod_version}-${buildNum.toInteger() + 1}"
    } else {
        project.version = "${mod_version}-${buildNum}"
    }
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
